--- a/app/css/styles.css
+++ b/app/css/styles.css
@@ -1,3 +1,18 @@
+/* https://coolors.co/1e212b-7bc559-ffc800-ff9747-ffffff */
+
+:root {
+	/* CSS */
+	--divider: hsla(226, 18%, 14%, 1);
+	--info: hsla(101, 48%, 56%, 1);
+	--highlight: hsla(47, 100%, 50%, 1);
+	--warning: hsla(26, 100%, 64%, 1);
+}
+
+body {
+	color: var(--divider);
+	font-family: Segoe UI, Helvetica, Arial, sans-serif;
+}
+
 .row-container {
 	display: flex;
 	justify-content: space-between;
@@ -12,14 +27,26 @@
 }
 
 .message-banner {
-	display: flex;
+	display: none;
 	justify-content: center;
 	align-items: center;
+	margin: 0px 20px 8px;
+	padding: 4px 0px;
 }
 
 input[type=text] {
   width: 48%;
   padding: 8px;
   box-sizing: border-box;
-  /* outline: none; */
+  border 2px solid var(--divider);
+  outline: none;
+}
+
+input[type=text]:focus {
+  border: 2px solid var(--highlight);
+}
+
+hr.solid {
+  border-top: 2px solid var(--divider);
+  margin: 0px 20px;
 }
