Now checks for duplicates and counts number in DB

--- a/app/css/styles.css
+++ b/app/css/styles.css
@@ -50,3 +50,8 @@ hr.solid {
   border-top: 2px solid var(--divider);
   margin: 0px 20px;
 }
+
+table {
+	margin: 0px 20px 8px;
+	padding: 4px 0px;
+}
