--- a/app/css/styles.css
+++ b/app/css/styles.css
@@ -51,7 +51,7 @@ hr.solid {
   margin: 0px 20px;
 }
 
-table {
-	margin: 0px 20px 8px;
-	padding: 4px 0px;
+table th {
+	background-color: var(--info);
+	padding: 10px 5px;
 }
