--- a/app/css/styles.css
+++ b/app/css/styles.css
@@ -11,6 +11,7 @@
 body {
 	color: var(--divider);
 	font-family: Segoe UI, Helvetica, Arial, sans-serif;
+	overflow: hidden;
 }
 
 .row-container {
@@ -18,6 +19,57 @@ body {
 	justify-content: space-between;
 	align-items: center;
 	margin: 20px;
+}
+
+.table-container {
+	margin-top: 30px;
+	height: 335px;
+	width: 800px;
+	overflow: auto;
+}
+
+.table-container table {
+	height: 98%;
+	width: 100%
+	margin-top: 38px;
+	display: inline-block;
+	overflow: auto;
+	border-collapse: collapse;
+}
+
+.table-container th div {
+	margin-top: -38px;
+	margin-left: -2px;
+	position: absolute;
+	text-align: left;
+	background: var(--info);
+	width: 350px;
+	padding: 6px 0px 6px 16px;
+}
+
+.table-container .div-small {
+	width: 98px;
+}
+
+.table-container th {
+	width: 350px;
+}
+
+.table-container .th-small {
+	width: 100px;
+}
+
+.table-container td {
+	text-align: left;
+	padding-left: 4px;
+	max-width: 30px;
+	text-overflow: ellipsis;
+	white-space: nowrap;
+	overflow: hidden;
+}
+
+.table-container tbody tr:hover {
+	background-color: var(--highlight);
 }
 
 .radio-container {
@@ -32,6 +84,9 @@ body {
 	align-items: center;
 	margin: 0px 20px 8px;
 	padding: 4px 0px;
+	text-overflow: ellipsis;
+	white-space: nowrap;
+	overflow: hidden;
 }
 
 input[type=text] {
@@ -49,9 +104,4 @@ input[type=text]:focus {
 hr.solid {
   border-top: 2px solid var(--divider);
   margin: 0px 20px;
-}
-
-table th {
-	background-color: var(--info);
-	padding: 10px 5px;
 }
