Implemented selecting of table elements and sorting of table

--- a/app/css/styles.css
+++ b/app/css/styles.css
@@ -72,6 +72,10 @@ body {
 	background-color: var(--highlight);
 }
 
+.selected {
+	background-color: var(--info);
+}
+
 .radio-container {
 	display: flex;
 	justify-content: center;
