--- a/app/css/styles.css
+++ b/app/css/styles.css
@@ -66,6 +66,7 @@ body {
 	text-overflow: ellipsis;
 	white-space: nowrap;
 	overflow: hidden;
+	cursor: default;
 }
 
 .table-container tbody tr:hover {
